Contruindo próprio site

--- a/specs.html
+++ b/specs.html
@@ -11,27 +11,20 @@
 </head>
 <body>
     <p>
-      Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+      <h1>
+      Prestação de serviços do MEI
+      </h1>
     </p>
     
     <section id="coteudo">
-      <img src="_imagens/glass-esquema-marcado.jpg" id="img1" usemap="#mapa"/>
+      <img src="_imagens/menuservicos.png" id="img1" usemap="#mapa"/>
       <map name="mapa">
-        <area shape="poly" coords="183,221,265,209,267,243,185,256" href="google-glass.html#tela" target="janela2"/>
-        <area shape="circle" coords="158,245,15" href="google-glass.html#camera" target="janela2"/>
-        <area shape="poly" coords="27,138,83,217,83,253,27,168" href="google-glass.html#sensores" target="janela2"/>
-        <area shape="circle" coords="77,52,11" href="google-glass.html#batgets" target="janela2"/>
+        <area shape="poly" coords="1,40,187,40,187,183,1,183" href="servicos.html#informatica" target="janela2"/>
+        <area shape="poly" coords="201,74,398,74,398,172,201,172" href="servicos.html#cftv" target="janela2"/>
+        <area shape="poly" coords="404,55,597,55,597,203,404,203" href="servicos.html#eletrica" target="janela2"/>
       </map>
-      <article>
-        <img src="_imagens/mao.png" alt="">
-        <header>
-          <h2>
-            Clique sobre as áreas destacadas em vermelho
-          </h2>
-        </header>
-      </article>
-      <P></P>
-      <iframe src="google-glass.html" name="janela2" class="frame" ></iframe>
+      
+      <iframe src="servicos.html" name="janela2" class="frame" ></iframe>
     </section>
 
   </section>
