--- a/home.html
+++ b/home.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tudo sobre Google Glass</title>
-  <link href="_css/home.css" rel="stylesheet" type="text/css"/>
-  <script src="_javascript/funcoes.js"></script>
-</head>
+
+  <head>
+
+    <meta charset="UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="_css/home.css" rel="stylesheet" type="text/css"/>
+
+    <script src="_javascript/funcoes.js"></script>
+
+    <title>home</title>
+
+  </head>
+
   <body>
     
     <div id="interface">
+
       <!-- Cabeçalho  -->
 
       <section id="principal">
@@ -31,19 +41,23 @@
       
           </figure>
   
-         <figure class="im3">
-          <figcaption class="cftv">
-            <h3>Sistema de CFTV para sua proteção</h3>
-            <p>Instalação e configuração de sistema de câmeras de segurança com monitoramento remoto para acessar da onde estiver</p>
-          </figcaption>
-         </figure>
+          <figure class="im3">
 
-         <figure class="im4">
-          <figcaption class="eletrica">
-            <h3>Serviço adicional</h3>
-            <p>Instalação e manutenção elétrica.Também fornecemos consultoria técnica para que na hora de escolher o produto, tenha mais tranquilidade e garantia de que atendera as sua necessidades</p>
-          </figcaption>
-         </figure>
+            <figcaption class="cftv">
+              <h3>Sistema de CFTV para sua proteção</h3>
+              <p>Instalação e configuração de sistema de câmeras de segurança com monitoramento remoto para acessar da onde estiver</p>
+            </figcaption>
+
+          </figure>
+
+          <figure class="im4">
+
+            <figcaption class="eletrica">
+              <h3>Serviço adicional</h3>
+              <p>Instalação e manutenção elétrica.Também fornecemos consultoria técnica para que na hora de escolher o produto, tenha mais tranquilidade e garantia de que atendera as sua necessidades</p>
+            </figcaption>
+
+          </figure>
 
         </article>
 
